// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`color settings clears the selected overlay color and maintains the inner blocks 1`] = `
"<!-- fp:cover {"isUserOverlayColor":true,"isDark":false} -->
<div class="fp-block-cover is-light"><span aria-hidden="true" class="fp-block-cover__background has-background-dim-100 has-background-dim"></span><div class="fp-block-cover__inner-container"><!-- fp:paragraph {"align":"center","placeholder":"Write title…"} -->
<p class="has-text-align-center"></p>
<!-- /fp:paragraph --></div></div>
<!-- /fp:cover -->"
`;

exports[`color settings sets a color for the overlay background when the placeholder is visible 1`] = `
"<!-- fp:cover {"overlayColor":"vivid-red"} -->
<div class="fp-block-cover"><span aria-hidden="true" class="fp-block-cover__background has-vivid-red-background-color has-background-dim-100 has-background-dim"></span><div class="fp-block-cover__inner-container"><!-- fp:paragraph {"align":"center","placeholder":"Write title…"} -->
<p class="has-text-align-center"></p>
<!-- /fp:paragraph --></div></div>
<!-- /fp:cover -->"
`;

exports[`color settings sets a gradient overlay background when a solid background was already selected 1`] = `
"<!-- fp:cover {"isUserOverlayColor":true,"gradient":"light-green-cyan-to-vivid-green-cyan","isDark":false} -->
<div class="fp-block-cover is-light"><span aria-hidden="true" class="fp-block-cover__background has-background-dim-100 has-background-dim has-background-gradient has-light-green-cyan-to-vivid-green-cyan-gradient-background"></span><div class="fp-block-cover__inner-container"><!-- fp:paragraph {"align":"center","placeholder":"Write title…"} -->
<p class="has-text-align-center"></p>
<!-- /fp:paragraph --></div></div>
<!-- /fp:cover -->"
`;

exports[`color settings toggles between solid colors and gradients 1`] = `
"<!-- fp:cover {"gradient":"light-green-cyan-to-vivid-green-cyan","isDark":false} -->
<div class="fp-block-cover is-light"><span aria-hidden="true" class="fp-block-cover__background has-background-dim-100 has-background-dim has-background-gradient has-light-green-cyan-to-vivid-green-cyan-gradient-background"></span><div class="fp-block-cover__inner-container"><!-- fp:paragraph {"align":"center","placeholder":"Write title…"} -->
<p class="has-text-align-center"></p>
<!-- /fp:paragraph --></div></div>
<!-- /fp:cover -->"
`;

exports[`minimum height settings changes the height value between units 1`] = `
"<!-- fp:cover {"url":"https://cldup.com/cXyG__fTLN.jpg","id":10710,"dimRatio":50,"overlayColor":"foreground","isUserOverlayColor":true,"minHeight":50,"minHeightUnit":"px","isDark":false} -->
<div class="fp-block-cover is-light" style="min-height:50px"><img class="fp-block-cover__image-background fp-image-10710" alt="" src="https://cldup.com/cXyG__fTLN.jpg" data-object-fit="cover"/><span aria-hidden="true" class="fp-block-cover__background has-foreground-background-color has-background-dim"></span><div class="fp-block-cover__inner-container"><!-- fp:paragraph {"align":"center","placeholder":"Write title…","fontSize":"large"} -->
<p class="has-text-align-center has-large-font-size"></p>
<!-- /fp:paragraph --></div></div>
<!-- /fp:cover -->"
`;

exports[`minimum height settings changes the height value to 20(vw) 1`] = `
"<!-- fp:cover {"url":"https://cldup.com/cXyG__fTLN.jpg","id":10710,"dimRatio":50,"overlayColor":"foreground","isUserOverlayColor":true,"minHeight":20,"minHeightUnit":"vw","isDark":false} -->
<div class="fp-block-cover is-light" style="min-height:20vw"><img class="fp-block-cover__image-background fp-image-10710" alt="" src="https://cldup.com/cXyG__fTLN.jpg" data-object-fit="cover"/><span aria-hidden="true" class="fp-block-cover__background has-foreground-background-color has-background-dim"></span><div class="fp-block-cover__inner-container"><!-- fp:paragraph {"align":"center","placeholder":"Write title…","fontSize":"large"} -->
<p class="has-text-align-center has-large-font-size"></p>
<!-- /fp:paragraph --></div></div>
<!-- /fp:cover -->"
`;

exports[`minimum height settings disables the decrease button when reaching the minimum value for Pixels (px) 1`] = `
"<!-- fp:cover {"url":"https://cldup.com/cXyG__fTLN.jpg","id":10710,"dimRatio":50,"overlayColor":"foreground","isUserOverlayColor":true,"minHeight":50,"minHeightUnit":"px","isDark":false} -->
<div class="fp-block-cover is-light" style="min-height:50px"><img class="fp-block-cover__image-background fp-image-10710" alt="" src="https://cldup.com/cXyG__fTLN.jpg" data-object-fit="cover"/><span aria-hidden="true" class="fp-block-cover__background has-foreground-background-color has-background-dim"></span><div class="fp-block-cover__inner-container"><!-- fp:paragraph {"align":"center","placeholder":"Write title…","fontSize":"large"} -->
<p class="has-text-align-center has-large-font-size"></p>
<!-- /fp:paragraph --></div></div>
<!-- /fp:cover -->"
`;

exports[`minimum height settings disables the decrease button when reaching the minimum value for Relative to parent font size (em) 1`] = `
"<!-- fp:cover {"url":"https://cldup.com/cXyG__fTLN.jpg","id":10710,"dimRatio":50,"overlayColor":"foreground","isUserOverlayColor":true,"minHeight":1,"minHeightUnit":"em","isDark":false} -->
<div class="fp-block-cover is-light" style="min-height:1em"><img class="fp-block-cover__image-background fp-image-10710" alt="" src="https://cldup.com/cXyG__fTLN.jpg" data-object-fit="cover"/><span aria-hidden="true" class="fp-block-cover__background has-foreground-background-color has-background-dim"></span><div class="fp-block-cover__inner-container"><!-- fp:paragraph {"align":"center","placeholder":"Write title…","fontSize":"large"} -->
<p class="has-text-align-center has-large-font-size"></p>
<!-- /fp:paragraph --></div></div>
<!-- /fp:cover -->"
`;

exports[`minimum height settings disables the decrease button when reaching the minimum value for Relative to root font size (rem) 1`] = `
"<!-- fp:cover {"url":"https://cldup.com/cXyG__fTLN.jpg","id":10710,"dimRatio":50,"overlayColor":"foreground","isUserOverlayColor":true,"minHeight":1,"minHeightUnit":"rem","isDark":false} -->
<div class="fp-block-cover is-light" style="min-height:1rem"><img class="fp-block-cover__image-background fp-image-10710" alt="" src="https://cldup.com/cXyG__fTLN.jpg" data-object-fit="cover"/><span aria-hidden="true" class="fp-block-cover__background has-foreground-background-color has-background-dim"></span><div class="fp-block-cover__inner-container"><!-- fp:paragraph {"align":"center","placeholder":"Write title…","fontSize":"large"} -->
<p class="has-text-align-center has-large-font-size"></p>
<!-- /fp:paragraph --></div></div>
<!-- /fp:cover -->"
`;

exports[`minimum height settings disables the decrease button when reaching the minimum value for viewport height (vh) 1`] = `
"<!-- fp:cover {"url":"https://cldup.com/cXyG__fTLN.jpg","id":10710,"dimRatio":50,"overlayColor":"foreground","isUserOverlayColor":true,"minHeight":1,"minHeightUnit":"vh","isDark":false} -->
<div class="fp-block-cover is-light" style="min-height:1vh"><img class="fp-block-cover__image-background fp-image-10710" alt="" src="https://cldup.com/cXyG__fTLN.jpg" data-object-fit="cover"/><span aria-hidden="true" class="fp-block-cover__background has-foreground-background-color has-background-dim"></span><div class="fp-block-cover__inner-container"><!-- fp:paragraph {"align":"center","placeholder":"Write title…","fontSize":"large"} -->
<p class="has-text-align-center has-large-font-size"></p>
<!-- /fp:paragraph --></div></div>
<!-- /fp:cover -->"
`;

exports[`minimum height settings disables the decrease button when reaching the minimum value for viewport width (vw) 1`] = `
"<!-- fp:cover {"url":"https://cldup.com/cXyG__fTLN.jpg","id":10710,"dimRatio":50,"overlayColor":"foreground","isUserOverlayColor":true,"minHeight":1,"minHeightUnit":"vw","isDark":false} -->
<div class="fp-block-cover is-light" style="min-height:1vw"><img class="fp-block-cover__image-background fp-image-10710" alt="" src="https://cldup.com/cXyG__fTLN.jpg" data-object-fit="cover"/><span aria-hidden="true" class="fp-block-cover__background has-foreground-background-color has-background-dim"></span><div class="fp-block-cover__inner-container"><!-- fp:paragraph {"align":"center","placeholder":"Write title…","fontSize":"large"} -->
<p class="has-text-align-center has-large-font-size"></p>
<!-- /fp:paragraph --></div></div>
<!-- /fp:cover -->"
`;

exports[`when an image is attached updates background opacity 1`] = `
"<!-- fp:cover {"url":"https://cldup.com/cXyG__fTLN.jpg","id":10710,"dimRatio":15,"overlayColor":"foreground","isUserOverlayColor":true,"isDark":false} -->
<div class="fp-block-cover is-light"><img class="fp-block-cover__image-background fp-image-10710" alt="" src="https://cldup.com/cXyG__fTLN.jpg" data-object-fit="cover"/><span aria-hidden="true" class="fp-block-cover__background has-foreground-background-color has-background-dim-20 has-background-dim"></span><div class="fp-block-cover__inner-container"><!-- fp:paragraph {"align":"center","placeholder":"Write title…","fontSize":"large"} -->
<p class="has-text-align-center has-large-font-size"></p>
<!-- /fp:paragraph --></div></div>
<!-- /fp:cover -->"
`;

exports[`when no media is attached and overlay color is set adds image 1`] = `
"<!-- fp:cover {"url":"https://test.files.finpress.com/local-image-1.mp4","id":2000,"dimRatio":50,"overlayColor":"cyan-bluish-gray","isUserOverlayColor":true} -->
<div class="fp-block-cover is-light"><img class="fp-block-cover__image-background fp-image-2000" src="https://test.files.finpress.com/local-image-1.mp4" data-object-fit="cover"/><span aria-hidden="true" class="fp-block-cover__background has-cyan-bluish-gray-background-color has-background-dim"></span><div class="fp-block-cover__inner-container"><!-- fp:paragraph {"align":"center","placeholder":"Write title…"} -->
<p class="has-text-align-center"></p>
<!-- /fp:paragraph --></div></div>
<!-- /fp:cover -->"
`;
